[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cloudforge"
version = "0.1.0"
description = "Multi-Cloud Test Lab Provisioner — provision, test, and teardown cloud environments from a YAML spec"
authors = [{ name = "Shashank Walke", email = "shashank8walke@gmail.com" }]
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"
keywords = ["cloud", "aws", "terraform", "testing", "devops", "qa"]
dependencies = [
    "click>=8.1",
    "pydantic>=2.7",
    "boto3>=1.34",
    "pytest>=8.2",
    "pyyaml>=6.0",
    "rich>=13.7",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "ruff",
    "mypy",
    "boto3-stubs[ec2,s3,iam]",
]

[project.scripts]
cloudforge = "cloudforge.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["cloudforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
